--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,3 +2,15 @@ set -g default-terminal "screen-256color"
 set -g history-limit 10000
 # Compute environment variable once for all windows
 set -g default-command "${SHELL}"
+
+
+set-window-option -g mode-keys vi
+
+bind-key Escape copy-mode
+bind-key p paste-buffer
+
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'V' rectangle-toggle
+bind-key -t vi-copy 'Y' copy-end-of-line
+
