add tmux resurrect plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,3 +14,5 @@ bind-key -t vi-copy 'y' copy-selection
 bind-key -t vi-copy 'V' rectangle-toggle
 bind-key -t vi-copy 'Y' copy-end-of-line
 
+run-shell ~/.vim/tmux/resurrect/resurrect.tmux
+
