--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,4 +15,6 @@ bind-key -t vi-copy 'V' rectangle-toggle
 bind-key -t vi-copy 'Y' copy-end-of-line
 
 run-shell ~/.vim/tmux/resurrect/resurrect.tmux
+run-shell ~/.vim/tmux/continuum/continuum.tmux
 
+set -g @continuum-restore 'on'
