integrate tmux with window managers notifications

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,8 @@ set -g history-limit 10000
 # Compute environment variable once for all windows
 set -g default-command "${SHELL}"
 
+set -g visual-activity on
+set-window-option -g monitor-activity on
 
 set-window-option -g mode-keys vi
 
