copy tmux selection to xclip

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,7 @@ bind-key Escape copy-mode
 bind-key p paste-buffer
 
 bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'y' copy-pipe 'xclip -in -selection clipboard > /dev/null'
 bind-key -t vi-copy 'V' rectangle-toggle
 bind-key -t vi-copy 'Y' copy-end-of-line
 
