--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,8 @@ bind-key -t vi-copy 'y' copy-pipe 'xclip -in -selection clipboard > /dev/null'
 bind-key -t vi-copy 'V' rectangle-toggle
 bind-key -t vi-copy 'Y' copy-end-of-line
 
+bind-key -n C-k clear-history
+
 run-shell ~/.vim/tmux/resurrect/resurrect.tmux
 run-shell ~/.vim/tmux/continuum/continuum.tmux
 
