--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,7 @@
         lola = log --all --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ad) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 	d = difftool
         st = status -sb
+        pushu = !sh -c 'git push -u origin $(git rev-parse --abbrev-ref HEAD)' -
 [core]
 	excludesfile = ~/.gitignore
 	ignorecase = false
