--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,8 @@
 [alias]
         lol = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ad) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
         lola = log --all --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ad) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
-        lolu = !sh -c 'git log --graph --pretty=format:%Cred%h%Creset\\ -%C\\(yellow\\)%d%Creset\\ %s\\ %Cgreen\\(%ad\\)\\ %C\\(bold\\ blue\\)\\<%an\\>%Creset --abbrev-commit --date=relative origin/master..$(git rev-parse --abbrev-ref --symbolic-full-name @{u})' -
+        lolu = !sh -c 'git log --graph --pretty=format:%Cred%h%Creset\\ -%C\\(yellow\\)%d%Creset\\ %s\\ %Cgreen\\(%ad\\)\\ %C\\(bold\\ blue\\)\\<%an\\>%Creset --abbrev-commit --date=relative origin/master..HEAD' -
+        lolm = !sh -c 'git log --graph --pretty=format:%Cred%h%Creset\\ -%C\\(yellow\\)%d%Creset\\ %s\\ %Cgreen\\(%ad\\)\\ %C\\(bold\\ blue\\)\\<%an\\>%Creset --abbrev-commit --date=relative $(git rev-parse --abbrev-ref --symbolic-full-name @{u})..HEAD' -
 	d = difftool
         st = status -sb
         pushu = !sh -c 'git push -u origin $(git rev-parse --abbrev-ref HEAD)' -
