set default chat apps desktop location

--- a/i3/config
+++ b/i3/config
@@ -109,6 +109,14 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
+# disable floating for google hangout
+for_window [title="^Google Hangouts"] floating disable
+
+# default workspave
+assign [title="^Google Hangouts"] 9
+assign [title="^Viber"] 9
+assign [title="^WhatsApp"] 9
+
 mode "move" {
     bindsym p focus parent
     bindsym h move left
