use tabbed layout by default in i3

--- a/i3/config
+++ b/i3/config
@@ -53,6 +53,9 @@ bindsym $mod+f fullscreen toggle
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
+# default container layout
+workspace_layout tabbed
+
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
