--- a/i3/config
+++ b/i3/config
@@ -102,11 +102,11 @@ bindsym Shift+XF86MonBrightnessUp exec xbacklight -inc 10
 bindsym Shift+XF86MonBrightnessDown exec xbacklight -dec 10
 
 # Volume controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +1%
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -1%
-bindsym Shift+XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5%
-bindsym Shift+XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -5%
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo +1%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo -1%
+bindsym Shift+XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo +5%
+bindsym Shift+XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute alsa_output.pci-0000_00_1f.3.analog-stereo toggle
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
