--- a/i3status/config
+++ b/i3status/config
@@ -82,7 +82,7 @@ disk "/home/" {
 }
 
 volume master {
-        device = "pulse:1"
+        device = "pulse:alsa_output.pci-0000_00_1f.3.analog-stereo"
         format = "♪: %volume"
         format_muted = "♪: muted (%volume)"
 }
