add i3 shortcuts to manage i3 scratchpad

--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,13 @@ font pango:Inconsolata For Powerline 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec uxterm
+
+# start a floating terminal
+bindsym $mod+Shift+Return exec uxterm -class Float
+for_window [instance="xterm" class="Float"] move scratchpad, scratchpad show;
+bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+minus scratchpad show
 
 # kill focused window
 bindsym $mod+Shift+q kill
